--- a/popup.html
+++ b/popup.html
@@ -1,34 +1,41 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Calculator for Chrome Extension</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Calculator</title>
+    <link href="style.css" rel="stylesheet">
+    <script src="script.js" defer></script>
+  </head>
+  <body>
+    <div class="container">
 
-    <body>
-        <div class="container">
-            <form name="calc" class="calculator">
-                <input type="txt" class="value" readonly name="txt">
-                <span class="num clear" onclick="calc.txt.value=''"><i>C</i></span>
-                <span class="num" onclick="calc.txt.value+='/'"><i>/</i></span>
-                <span class="num" onclick="calc.txt.value+='*'"><i>*</i></span>
-                <span class="num" onclick="calc.txt.value+='7'"><i>7</i></span>
-                <span class="num" onclick="calc.txt.value+='8'"><i>8</i></span>
-                <span class="num" onclick="calc.txt.value+='9'"><i>9</i></span>
-                <span class="num" onclick="calc.txt.value+='-'"><i>-</i></span>
-                <span class="num" onclick="calc.txt.value+='4'"><i>4</i></span>
-                <span class="num" onclick="calc.txt.value+='5'"><i>5</i></span>
-                <span class="num" onclick="calc.txt.value+='6'"><i>6</i></span>
-                <span class="num plus" onclick="calc.txt.value+='+'"><i>+</i></span>
-                <span class="num" onclick="calc.txt.value+='1'"><i>1</i></span>
-                <span class="num" onclick="calc.txt.value+='2'"><i>2</i></span>
-                <span class="num" onclick="calc.txt.value+='3'"><i>3</i></span>
-                <span class="num" onclick="calc.txt.value+='0'"><i>0</i></span>
-                <span class="num" onclick="calc.txt.value='00'"><i>00</i></span>
-                <span class="num" onclick="calc.txt.value='.'">.</span>
-
-                <span class="num" onclick="document.calc.txt.value=eval(calc.txt.value)"><i>=</i></span>
-            </form>
+      <div class="calculator">
+    
+        <div class="output">
+        <div data-previous-operand class="previous-operand"></div>
+        <div data-current-operand class="current-operand"></div>
         </div>
-    </body>
+        <span data-all-clear class="clear">AC</span>
+        <span data-delete>DEL</span>
+        <span data-operation>÷</span>
+        <span data-number>1</span>
+        <span data-number>2</span>
+        <span data-number>3</span>
+        <span data-operation>*</span>
+        <span data-number>4</span>
+        <span data-number>5</span>
+        <span data-number>6</span>
+        <span data-operation class="plus">+</span>
+        <span data-number>7</span>
+        <span data-number>8</span>
+        <span data-number>9</span>
+        <span data-operation>-</span>
+        <span data-number>.</span>
+        <span data-number>0</span>
+        <span data-equals class="equal">=</span>
+        <a class="footText "> Made with &#10084; by karthikeya. </a>
+        </div>
+    </div>
+
+  </body>
 </html>
